kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: demo
spec:
  ingressClassName: nginx
  rules:
    - host: movieplex.jar331.messwithdns.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  name: api-gateway
